--- a/index.html
+++ b/index.html
@@ -219,12 +219,14 @@ and an affiliate of the <a href="https://www.cesifo.org/en/research-network" tar
 I graduated with a <a href="https://www.sipa.columbia.edu/sipa-education/phd-sustainable-development" target="_blank">Ph.D. in Sustainable Development from Columbia University</a> in 2018. 
 My dissertation focused on the economics of the environment, technological change, and innovation.   
 
-<p><em>If you’re interested in the big picture on innovation, climate policy, and the energy transition—but aren’t sure what to read or where to start—my forthcoming Handbook chapter below offers a clear overview.</em></p>
+<br>
 
-“The Economics of Climate Innovation: Technology, Climate Policy, and the Clean Energy Transition.” 
-   Link <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5726902" target="_blank">here</a>.
+<p><em>If you're curious about innovation, climate policy, and the energy transition but unsure where to begin, 
+  the Handbook chapter below provides a structured introduction to the field.</em></p>
+<strong>“The Economics of Climate Innovation: Technology, Climate Policy, and the Clean Energy Transition.”</strong> 
+  Link <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5726902" target="_blank">here</a>.
   with <em> <a href="https://economics.mit.edu/people/faculty/jacob-moscona" target="_blank">Jacob Moscona</a> (MIT)</em>.
-  <em><strong>Handbook of the Economics of Climate Change</strong>. Volume 2. Elsevier. Forthcoming. </em>
+  Handbook of the Economics of Climate Change. Volume 2. Elsevier. Forthcoming.  
   (co-edited by Lint Barrage and Solomon Hsiang). 
   
 </div>
