Update introduction text in index.html
Revised text for clarity and formatting in the introduction section.

--- a/index.html
+++ b/index.html
@@ -220,9 +220,14 @@ I graduated with a <a href="https://www.sipa.columbia.edu/sipa-education/phd-sus
 My dissertation focused on the economics of the environment, technological change, and innovation.   
 
 <br>
+  <br>
+  <p></p>
+    
+<p><em>
 
-<p><em>If you're curious about innovation, climate policy, and the energy transition but unsure where to begin, 
-  the Handbook chapter below provides a structured introduction to the field.</em></p>
+If you're curious about innovation, climate policy, and the energy transition but unsure where to begin, 
+  the Handbook chapter below provides a structured introduction to the field:  
+  </em></p>
 <strong>“The Economics of Climate Innovation: Technology, Climate Policy, and the Clean Energy Transition.”</strong> 
   Link <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5726902" target="_blank">here</a>.
   with <em> <a href="https://economics.mit.edu/people/faculty/jacob-moscona" target="_blank">Jacob Moscona</a> (MIT)</em>.
