--- a/index.html
+++ b/index.html
@@ -197,11 +197,17 @@
     
 
 <p><div style="text-align: justify">
-<strong>Hello and Welcome!</strong>  <br>
+<strong>Hello and Welcome!</strong>  
+  
+<br>
+<br>
 
 I am an environmental economist working on topics related to innovation, technological change, and energy. 
 In short, my interests lie primarily in understanding how policies and, more broadly speaking, institutions can influence innovation and science. 
-Ultimately, my goals are to better understand how economic development can be sustainable for the environment and societies.<br>
+Ultimately, my goals are to better understand how economic development can be sustainable for the environment and societies.
+  
+<br>
+<br>
 
 I am an <strong>Associate Professor in Environmental Economics</strong> 
 in the <a href="https://www.lse.ac.uk/geography-and-environment" target="_blank">Department of Geography and Environment</a> 
@@ -210,12 +216,18 @@ I also serve as Co-Lead on "Generating Sustainable Growth"
 at the <a href="https://www.lse.ac.uk/global-school-of-sustainability" target="_blank">LSE Global School of Sustainability</a>.
 For the 2025-2026 academic sabbatical year, I am a Visiting Scholar at the University of California, Berkeley's Department of Agricultural and Resource Economics.
 
+<br>
+<br>
+
 I am also affiliated with 
   the <a href="https://cep.lse.ac.uk/" target="_blank">Center for Economic Performance (CEP)</a> 
   and the <a href="https://www.lse.ac.uk/granthaminstitute/" target="_blank">Grantham Research Institute</a> at LSE,
 a Research Affiliate of the <a href="https://cepr.org/" target="_blank">CEPR (Centre for Economic Policy Research)</a>, 
 and an affiliate of the <a href="https://www.cesifo.org/en/research-network" target="_blank">CESifo Research Network</a>.
 
+<br>
+<br>
+  
 I graduated with a <a href="https://www.sipa.columbia.edu/sipa-education/phd-sustainable-development" target="_blank">Ph.D. in Sustainable Development from Columbia University</a> in 2018. 
 My dissertation focused on the economics of the environment, technological change, and innovation.   
 
