Add non-refereed publications to index.html

--- a/index.html
+++ b/index.html
@@ -467,7 +467,18 @@ Forthcoming at <em><strong>American Economic Review: Insights</strong></em> (202
 <br>
 
 <ul>
-   
+
+<li><p>“The Economics of Climate Innovation: Technology, Climate Policy, and the Clean Energy Transition.” 
+<em><strong> Handbook of the Economics of Climate Change.</strong> Volume 2. Elsevier. Forthcoming. (co-edited by Lint Barrage and Solomon Hsiang).
+Link <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5726902" target="_blank">here</a>.
+with <em> <a href="https://economics.mit.edu/people/faculty/jacob-moscona" target="_blank">Jacob Moscona</a> (MIT)</em>.
+<br /></p></li>
+
+<li><p>"Critical Minerals and the Clean Energy Transition: The Role of Innovation Across the Supply Chain." 
+<em><strong>OECD paper prepared for the Working Party on Integrating Environmental and Economic Policies</strong> (2025). Link <a href="https://www.lse.ac.uk/granthaminstitute/publication/critical-minerals-and-the-clean-energy-transition-the-role-of-innovation-across-the-supply-chain/" target="_blank">here</a>.
+with <a href="https://www.graduateinstitute.ch/academic-departments/faculty/joelle-noailly" target="_blank">Joelle Noailly</a> (Graduate Institute Geneva) </em>
+<br /></p></li>
+  
 <li><p>"Support for climate policy researchers." 
 <em><strong>Science</strong> (2022). Link <a href="https://www.science.org/doi/10.1126/science.adf8956" target="_blank">here</a>. with Hanna R, Nuñez-Jimenez A, Nock D, Arcusa S, Castellanos S, Davidson
 MR, Edwards MR, Galeazzi C, Gao X, Graff M, Kennedy KM, Kontou E, Lathwal P, Musa M, O'Rear E, Sivaranjani S, Zhang J, Zhu Q. </em>
